--- a/scr/faketube.css
+++ b/scr/faketube.css
@@ -1,28 +1,43 @@
+
+
 *{
   margin: 0;
   padding: 0;
+  font-family: "roboto";
 }
 
 body {
   background-color: rgb(15, 13, 13);
 }
+
+
 nav {
+  position: sticky;
+  top: 0px;
+  background: rgba(15, 13, 13, 0.21);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  border: 1px solid rgba(15, 13, 13, 0.3);
+}
+
+.navup {
   display: grid;
-  grid-template-columns: 20% 60% 20%;
-  justify-items: center;
+  grid-template-columns: 20% 80%;  
+  justify-items: normal;
   align-items: center;
   padding: 0 16px;
   font-size: 10px;
-  position: sticky;
-  top: 0;
 }
 
-header {
-  position: sticky;
-  top: 45px;
+.navdow {
+  display: flex;
+  align-items: center;
+  overflow-x: auto;
+  scrollbar-width: none;
 }
 
-#iconyou, #search, #notification, #perrito, #Principal, #Shorts, #Suscripciones, #Tu, #trebar {
+
+#iconyou, #search, #notification, #perrito, #principal, #shorts, #suscripciones, #tu, #trebar {
   background-color: transparent;
   color: beige;
 }
@@ -34,13 +49,20 @@ header {
   width: 100%;
 }
 
+#trebar {
+  display: flex;
+  padding: 4px;
+  border: transparent;
+}
+
 .izquierda {
   display: flex;
   gap: 10px;
 }
 
-.center {
-  display: flex;
+
+.center { 
+  /*display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
@@ -48,7 +70,8 @@ header {
   border-bottom-color: rgba(128, 128, 128, 0.304);
   margin: 0 0 0 40px;
   padding: 0 4px;
-  width: 100%;
+  width: 100%;*/
+  display: none;
 }
 
 .search {
@@ -63,6 +86,8 @@ header {
   border-radius: 15px 0 0 15px;
   padding: 0 4px 0 16px;
   font-size: 16px;
+  width: 400px;
+  border: 1px solid rgba(128, 128, 128, 0.304);
 }
 
 #iconsearch {
@@ -102,18 +127,17 @@ header {
   padding: 5px;
 }
 
-#iconsearch, #micro, #crear, .bar {
+#iconsearch, #micro, #crear, .bar, .poins {
   background-color: rgba(128, 128, 128, 0.304);
   color: beige;
 }
 
-.bar-div {
+.bardiv {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 5px 20px;
   gap: 20px;
-  
 }
 
 .bar {
@@ -127,26 +151,164 @@ header {
   width: 100%;
   height: 100%;
   font-weight: 500;
+  border: 1px;
 }
 
-main > div {
-  display: grid;
-  justify-items: left;
-  align-content: center;
-}
 
 main {
   display: grid;
+  grid-template-columns: 100%;
+  padding: 16px;
+  margin: 16px;
 }
 
-main section {
-  display: flex;
+
+
+aside> div {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  size: 10px;
+  padding: 0, 4px;
+  position: fixed;
+  left: 0;
+  margin: 0, 10px, 0, 5px;
 }
 
 .sidebar {
-  display: none;
+  width: 90%;
+  border-radius: 15px;
+  font-size: 10px;
+  padding: 7px;
 }
 
-@media screen {
-  
+.videos {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
+}
+
+.img {
+  border-radius: 15px;
+  width: 100%;
+  height: 80%;
+}
+
+.vid-icon {
+  border-radius: 100%;
+  width: 100%;
+}
+
+.info {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 15px;
+}
+
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  p {
+    color: rgb(97, 190, 20)
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .videos {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    font-size: 10px;
+    border-bottom-color: rgba(128, 128, 128, 0.304);
+    margin: 0 0 0 40px;
+    padding: 0 4px;
+    width: 100%;
+  }
+  #search {
+    width: 200px;
+  }
+  .navup {
+    display: grid;
+    grid-template-columns: 20% 60% 20%; 
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    font-size: 10px;
+    border-bottom-color: rgba(128, 128, 128, 0.304);
+    margin: 0 0 0 40px;
+    padding: 0 4px;
+    width: 100%;
+  }
+  #search {
+    display: flex;
+    background-color: transparent;
+    justify-content: space-between;
+    border-radius: 15px 0 0 15px;
+    padding: 0 4px 0 16px;
+    font-size: 16px;
+    width: 400px;
+    border: 1px solid rgba(128, 128, 128, 0.304);
+  }
+  .navup {
+    display: grid;
+    grid-template-columns: 20% 60% 20%; 
+  }
+  main {
+    display: grid;
+    grid-template-columns: 5% 95%;
+  }
+  aside> div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    size: 10px;
+    padding: 0, 4px;
+    position: fixed;
+    left: 0;
+    margin: 0, 10px, 0, 5px;
+  }
+  .sidebar {
+    width: 90%;
+    border-radius: 15px;
+    font-size: 10px;
+    padding: 7px;
+}
+  .videos {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  #search {
+    display: flex;
+    background-color: transparent;
+    justify-content: space-between;
+    border-radius: 15px 0 0 15px;
+    padding: 0 4px 0 16px;
+    font-size: 16px;
+    width: 600px;
+    border: 1px solid rgba(128, 128, 128, 0.304);
+  }
+  .videos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
